--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     
     <head>
-        <script src="jquery-1.10.2.js" > </script>
+        <script src="js/jquery-1.10.2.js" > </script>
+        <script src="js/main.js" > </script>
         <link rel="stylesheet" href="css/main.css">
     </head>
     
