Changing to the playlist view

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             
             <div id="user_playlists">
             </div>
+
+            <div id="playlist-player">Player</div>
+            
             <br>
             <br>
 
