--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
             <div id="playlist-url"></div>
             <div id="single-track-player"></div>
             <div id="playlist-player"></div>
-
-            <br>
-            <br>
-
+            <div id="search_form"></div>
+            <div id="search_results"></div>
             <script>
                 $("#Create").click(function(event) {
                     code = $("#playlistCode").val();
@@ -48,6 +46,7 @@
                     code = $(this).val();
                     delete_playlist(code);
                 });
+                
             </script>
         </div>
     </body>
