Some changes. And stuff I can't figure out

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             <div id="user_playlists"></div>
             <div id="playlist-url"></div>
-            <div id="single-track-player"></div>
+            <div id="single-track-player"></div><br>
             <div id="playlist-player"></div>
             <div id="search_form"></div>
             <div id="search_results"></div>
