--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="js/main.js" > </script>
         <link rel="stylesheet" href="css/main.css">
     </head>
+    <!-- testing git -->
     
     <body>
         
